[package]
name = "os_units"
version = "0.4.0"
authors = ["toku-sa-n <tokusan441@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library which provides unit types for writing OS."
repository = "https://github.com/toku-sa-n/os_units"
categories = ["no-std", "os"]
keywords = ["no_std", "os"]

[dependencies]
x86_64 = { version = "0.14.0", default-features = false }
